# ML-LAB2

./: README.md  main.py  pyproject.toml
src/: main.py
